--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fsd-react-snippets",
+  "publisher": "Serafim",
   "displayName": "FSD React Snippets",
   "description": "Сниппеты для cva и react",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.86.0"
+    "vscode": "^1.20.0"
   },
   "categories": [
     "Snippets"
@@ -16,5 +17,8 @@
         "path": "./snippets/snippets.code-snippets"
       }
     ]
+  },
+  "repository": {
+    "url": "https://github.com/SerafimKremnev/react-snippets"
   }
 }
