--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
       {
         "language": "typescript",
         "path": "./snippets/snippets.code-snippets"
+      },
+      {
+        "language": "typescriptreact",
+        "path": "./snippets/snippets.code-snippets"
       }
     ]
   },
